Fix Column z-index

--- a/src/components/Column.css
+++ b/src/components/Column.css
@@ -7,6 +7,8 @@
   height: 120%;
   width: 120px;
   transform: rotate(-2deg);
+
+  z-index: -1;
 }
 
 .column .groove {
